Added item and user_item

--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -20,6 +20,14 @@
     <%= f.text_field :last_name %>
   </div>
   <div class="field">
+    <%= f.label :cell_phone %><br />
+    <%= f.text_field :cell_phone %>
+  </div>
+  <div class="field">
+    <%= f.label :bio %><br />
+    <%= f.text_area :bio %>
+  </div>
+  <div class="field">
   <%= f.label 'Add your avatar' %>
   <%= f.file_field :avatar %>
   </div>
