--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,5 +1,11 @@
 <h1>Users#index</h1>
 <p>Find me in app/views/users/index.html.erb</p>
+<%= form_tag users_path, :method => 'get', id: 'users_search' do %>
+<p>
+	<%= text_field_tag :search, params[:search] %>
+	<%= submit_tag "Search", :name => nil %>
+</p>
+<% end %>
 <% @users.each do |u| %>
 <table>
 	<thead>
