--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -23,6 +23,9 @@
 		</clipPath>
 	</defs>
 </svg>
+<div class="search_button_area">
+<button class="search_button"><%= link_to 'Search Other Users', users_path %></button>
+</div>
 
 <h1>Owned Items</h1>
 <table>
@@ -34,7 +37,8 @@
 			<th>Description</th>
 			<th>Category</th>
 			<th>Image</th>
-			<th>Shared?</th>
+			<th>Loaned?</th>
+			<th>Loan It</th>
 			<th>Delete</th>
 		</tr>
 	</thead>
@@ -45,7 +49,8 @@
 			<td><%= item.description %> </td>
 			<td><%= item.category %></td>
 			<td><%= image_tag item.avatar.url ('thumb') %></td>
-			<td><button><%= link_to 'Share', new_item_share_path(item) %></button></td>
+			<td>This will show if it is loaned.</td>
+			<td><button><%= link_to 'Loan', new_item_share_path(item) %></button></td>
 			<td><button>
 				<%= link_to 'Delete', item, method: :delete, remote: true, data: { confirm: "Are you sure?" } %>
 			</button></td>
@@ -54,5 +59,5 @@
 	<% end %>
 </table>
 <hr>
-<h1>Items I've Borred</h1>
+<h1>Items I've Borrowed</h1>
 <table></table>
