--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -49,7 +49,14 @@
 			<td><%= item.description %> </td>
 			<td><%= item.category %></td>
 			<td><%= image_tag item.avatar.url ('thumb') %></td>
-			<td><% if @user.shared_items.empty? %>No Loaned Items<% end %></td>
+			<td>
+			<% if @user.shared_items.empty? %>
+			No Loaned Items
+			<% else %>
+			<% @have.each do |have| %>
+			Loaned To: <%= have.borrower.username %>
+			<% end %>
+			<% end %></td>
 			<td><button><%= link_to 'Loan', new_item_share_path(item) %></button></td>
 			<td><button>
 				<%= link_to 'Delete', item, method: :delete, remote: true, data: { confirm: "Are you sure?" } %>
@@ -69,12 +76,16 @@
 <% if @user.shared_items.empty? %>
 	No Shared Items Found
 	<% else %>
-	<div>
-	<% @have.each do |have| %>
-	<p><%= have.borrower.username %></p>
-	<p><%= have.borrower.email %></p>
-	<% end %>
-	</div>
+	
+		<div>
+		<% @have.each do |have|  %>
+		<p><%= have.borrower.username %></p>
+		<p><%= have.borrower.email %></p>
+		<p><%= have.item_borrowed.name %>
+		<% end %>
+		</div>
+		<hr>
+	
 <% end %>
 
 
