--- a/app/views/item_shares/new.html.erb
+++ b/app/views/item_shares/new.html.erb
@@ -10,20 +10,19 @@ They then need to select a user to share this item with. So that the ItemShare w
 
  <p>Who do you want to share this with?</p>
 
-<%= form_for @new_share do |f| %>
-	<%= f.label :user_id%>
-	<%= f.number_field :user_id %>
-	<%= f.hidden_field :item_id, { :value => @item_id} %>
-<%= f.submit %>
-<% end %>
-
-
-
 <h3>A list of all the Users</h3>
+<%= form_tag new_item_share_path, :method => 'get', id: 'users_search' do %>
+<p>
+	<%= text_field_tag :search_users, params[:search_users] %>
+	<%= hidden_field_tag :item_id, params[:item_id] %>
+	<%= submit_tag "Search", :name => nil %>
+</p>
+<% end %>
 <%  @users.each do |user| %>
 
 	<%= user.username %>
 	<%= user.id %>
+	<%= link_to "Loan It", item_shares_path(:user_id => user.id, :item_id => @item_id), :method => :post %>
 	<hr>
 	<br>
 
