Added Styling and Delete Link

--- a/app/views/devise/shared/_login_items.html.erb
+++ b/app/views/devise/shared/_login_items.html.erb
@@ -1,9 +1,9 @@
 <% if user_signed_in? %>
-  <li>
-  <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>        
+  <li class= "nav-item">
+  <%= link_to('Logout', destroy_user_session_path, :method => :delete, class: "nav-link") %>        
   </li>
 <% else %>
-  <li>
-  <%= link_to('Login', new_user_session_path)  %>  
+  <li class= "nav-item">
+  <%= link_to('Login', new_user_session_path, class: "nav-link")  %>  
   </li>
 <% end %>
