--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,2 +1,7 @@
-<h1> Welcome to Borrow </h1>
-<%= link_to 'About', page_path('about') %>
+<div class="index_background">
+<div class="row">
+<div class="col-lg-12">
+<p>Fuck</p>
+</div>
+</div>
+</div>
