--- a/app/views/devise/shared/_registration_items.html.erb
+++ b/app/views/devise/shared/_registration_items.html.erb
@@ -1,9 +1,9 @@
 <% if user_signed_in? %>
-  <li>
-  <%= link_to('Edit registration', edit_user_registration_path) %>
+  <li class= "nav-item">
+  <%= link_to('Edit Profile', edit_user_registration_path, class: "nav-link") %>
   </li>
 <% else %>
-  <li>
-  <%= link_to('Register', new_user_registration_path)  %>
+  <li class= "nav-item">
+  <%= link_to('Register', new_user_registration_path, class: "nav-link")  %>
   </li>
 <% end %>
