--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,26 +7,30 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<p class="notice"><%= notice %></p>
-       <p class="alert"><%= alert %></p>
-       <div class='nav'>
-       <nav>
-       	<ul>
-       		<li>
-       			<%= link_to 'Create Item to Share', new_item_path %>
-       		</li>
-       	</ul>
-       </nav>
-<ul class="hmenu">
-  <%= render 'devise/shared/registration_items' %>
-  <%= render 'devise/shared/login_items' %>
-  <% if user_signed_in? %>
-  <%= link_to 'Profile', profile_path(current_user) %>
-  <% end %>
-</ul>
-<div class="wrapper">
-  <%= yield %>
-</div>
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-</body>
-</html>
+  <div class="container-fluid">
+    <nav class="navbar navbar-fixed-top navbar-dark bg-inverse">
+      <%= link_to 'Borrowed', '/', class: "navbar-brand" %>
+      <ul class="nav navbar-nav pull-right">
+        <li class="nav-item"><a href="##" class="nav-link" data-toggle="tab">Home</a></li>
+        <li class="nav-item"><%= link_to 'About', page_path('about'), class: "nav-link" %></li>
+        <li class="nav-item">
+          <%= link_to_if user_signed_in?, 'Profile', profile_path(current_user), class: "nav-link" %></li>
+        </ul>
+      </nav>
+    </div>
+    <div class="container-fluid">
+      <p class="notice"><%= notice %></p>
+      <p class="alert"><%= alert %></p>
+      <%= yield %>
+      <footer>
+        <nav class="navbar navbar-fixed-bottom navbar-light bg-faded">
+          <ul class="nav navbar-nav  pull-right">
+            <%= render 'devise/shared/registration_items' %>
+            <%= render 'devise/shared/login_items' %>
+          </ul>
+        </nav>
+      </footer>
+    </div>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+  </body>
+  </html>
