--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,75 +7,85 @@
 -->
 
 
-
-<div class="clip-wrap">
-	<%= image_tag @user.avatar.url(:small), class: "user_profile_element" %>
+<div class="row">
+	<div class="clip-wrap col-lg-3">
+		<%= image_tag @user.avatar.url(:small), class: "user_profile_element" %>
+		<svg width="0" height="0">
+			<defs>
+				<clipPath id="clip-shape" clipPathUnits="objectBoundingBox">
+					<polygon points="0 1, 0 0, 1 0, 0.8 1" />
+				</clipPath>
+			</defs>
+		</svg>
+	</div>
+	<div class="user-info col-lg-7">
+		<p><%= @user.username %></p>
+		<p><%= @user.first_name %> <%= @user.last_name %></p>
+		<p><%= @user.bio %></p>
+		<p><%= @user.cell_phone %></p>
+	</div>
+	<div class="button-areas col-lg-2">
+		<div class="search_button_area">
+			<button class="search_button"><%= link_to 'Search Other Users', users_path %></button>
+		</div>
+		<div><%= link_to 'Create Item to Share', new_item_path %></div>
+	</div>
 </div>
+<div class="row">
+	<h1>Owned Crap</h1>
+	<table class="table" >
 
-<svg width="0" height="0">
-	<defs>
-		<clipPath id="clip-shape" clipPathUnits="objectBoundingBox">
-			<polygon points="0 1, 0 0, 1 0, 0.8 1" />
-		</clipPath>
-	</defs>
-</svg>
-<p><%= @user.username %></p>
-<p><%= @user.first_name %> <%= @user.last_name %></p>
-<p><%= @user.bio %></p>
-<p><%= @user.cell_phone %></p>
-<div class="search_button_area">
-	<button class="search_button"><%= link_to 'Search Other Users', users_path %></button>
-</div>
-
-<h1>Owned Crap</h1>
-<table>
-	<% @user.items.each do |item| %>
-	<thead>
-		<tr>
-			<th>ID</th>
-			<th>Name</th>
-			<th>Description</th>
-			<th>Category</th>
-			<th>Image</th>
-			<th>Loaned?</th>
-			<th>Loan It</th>
-			<th>Delete</th>
-		</tr>
-	</thead>
-	<tbody>
-		<tr>
-			<td><%= item.id %></td>
-			<td><%= item.name %></td>
-			<td><%= item.description %> </td>
-			<td><%= item.category %></td>
-			<td><%= image_tag item.avatar.url ('thumb') %></td>
-			<td>
-				<% if @user.shared_items.where(item_id: item.id).length < 1 %>
-				Nope
-				<% else %>
-				Loaned To: <%= @user.shared_items.find_by_item_id(item.id).borrower.username %>
-				<% end %></td>
-				<td><button><%= link_to 'Loan', new_item_share_path(item: item.id) %></button></td>
-				<td><button>
-					<%= link_to 'Delete', item, method: :delete, remote: true, data: { confirm: "Are you sure?" } %>
-				</button></td>
+		<thead>
+			<tr>
+				<th>ID</th>
+				<th>Name</th>
+				<th>Description</th>
+				<th>Category</th>
+				<th>Image</th>
+				<th>Loaned?</th>
+				<th>Loan It</th>
+				<th>Delete</th>
 			</tr>
-		</tbody>
-		<% end %>
-	</table>
+		</thead>
+		<tbody>
+			<% @user.items.each do |item| %>
+			<tr>
+				<td><%= item.id %></td>
+				<td><%= item.name %></td>
+				<td><%= item.description %> </td>
+				<td><%= item.category %></td>
+				<td><%= image_tag item.avatar.url ('thumb') %></td>
+				<td>
+					<% if @user.shared_items.where(item_id: item.id).length < 1 %>
+					Nope
+					<% else %>
+					Loaned To: <%= @user.shared_items.find_by_item_id(item.id).borrower.username %>
+					<% end %></td>
+					<td><% if @user.shared_items.where(item_id: item.id).length < 1 %>
+					<button><%= link_to 'Loan', new_item_share_path(item: item.id) %></button>
+					<% else %>
+					<button><%= link_to 'Take Back' %></button><% end %></td>
+					<td><button>
+						<%= link_to 'Delete', item, method: :delete, remote: true, data: { confirm: "Are you sure?" } %>
+					</button></td>
+				</tr>
+			</tbody>
+			<% end %>
+		</table>
+	</div>
 	<hr>
 	<h1>Borrowed Crap</h1>
-	<% if ItemShare.where(user_id: @userId) %>
-	Sexy times
-	<% end %>
-	<hr>
-	
-	<% if @user.shared_items.present? %>
+	<!-- This should go a list of items that the user has borrowed. -->	
 
+
+
+	<hr>
+
+	<% if @user.shared_items.present? %>
 	<h1>Loanned Crap</h1>
 	<div>
-		<table>
-			<% @have.each do |have|  %>
+		<table class="table">
+
 			<thead>
 				<tr>
 					<th>Item</th>
@@ -84,6 +94,7 @@
 				</tr>
 			</thead>
 			<tbody>
+				<% @have.each do |have|  %>
 				<tr>
 					<td><%= have.item_borrowed.name %></td>
 					<td><%= have.borrower.username %></td>
