--- a/app/views/item_shares/new.html.erb
+++ b/app/views/item_shares/new.html.erb
@@ -1,5 +1,5 @@
-<h1>ItemShares#new</h1>
-<p>Find me in app/views/item_shares/new.html.erb</p>
+<%= content_for :page_title, 'Lown It' %>
+
 
 
 <!-- User comes here from their profile after clicking on Loan next to the item they want to loan.
