--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,5 +1,5 @@
-<h1>Items#new</h1>
-<p>Find me in app/views/items/new.html.erb</p>
+<%= content_for :page_title, 'Create Something to Share' %>
+
 <%= form_for @item do |f| %>
 <%= f.label :name %>
 <%= f.text_field :name %>
