--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -6,6 +6,7 @@
 	- Shows the items the user has borrwed
 -->
 
+<%= content_for :page_title, 'Profile' %>
 
 <div class="row">
 	<div class="clip-wrap col-xs-6">
