--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Borrow</title>
+  <title><%= yield(:page_title) %></title>
+
   <link href='https://fonts.googleapis.com/css?family=Lobster' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Inconsolata:400,700' rel='stylesheet' type='text/css'>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
@@ -10,17 +11,20 @@
 
 </head>
 <body>
-<nav class="navbar navbar-fixed-top navbar-dark bg-inverse nav-bg container">
-      <%= link_to 'Lowner', '/', class: "navbar-brand site-name" %>
-      <ul class="nav navbar-nav pull-right">
-        <li class="nav-item"><a href="##" class="nav-link" data-toggle="tab">Home</a></li>
-        <li class="nav-item"><%= link_to 'About', page_path('about'), class: "nav-link" %></li>
-        <%= render 'layouts/shared/profile_items' %>
-      </ul>
+  <nav class="navbar navbar-fixed-top navbar-dark bg-inverse nav-bg container">
+    <%= link_to 'Lowner', '/', class: "navbar-brand site-name" %>
+    <ul class="nav navbar-nav pull-right">
+      <li class="nav-item"><a href="##" class="nav-link" data-toggle="tab">Home</a></li>
+      <li class="nav-item"><%= link_to 'About', about_path, class: "nav-link" %></li>
+      <%= render 'layouts/shared/profile_items' %>
+    </ul>
   </nav>
   <div class="container-fluid">
-    <p class="notice"><%= notice %></p>
+  <div class="row">
+    <div class="col-xs-12"><p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
+    </div>
+    </div>
     <%= yield %>
     <footer>
       <nav class="navbar navbar-fixed-bottom navbar-light bg-faded">
