--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-  <nav class="navbar navbar-fixed-top navbar-dark bg-inverse nav-bg container">
+  <nav class="navbar navbar-fixed-top navbar-dark bg-inverse nav-bg container clearfix">
     <%= link_to 'Lowner', '/', class: "navbar-brand site-name" %>
     <ul class="nav navbar-nav pull-right">
       <li class="nav-item"><a href="##" class="nav-link" data-toggle="tab">Home</a></li>
