--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -3,6 +3,7 @@
 @import "bootstrap";
 @import "users";
 @import "static";
+@import 'pages';
 
 @-moz-document url-prefix() {
 	fieldset {
@@ -13,6 +14,7 @@
 
 body {
 	font-family: 'Inconsolata';
+	padding-top: 50px;
 }
 	.user_profile_element {
 		max-width: 200px;
@@ -27,17 +29,15 @@ body {
 	font-family: 'Inconsolata';
 }
 
-body.home_page {
-	background: url('/home_photo_field.jpeg');
 
-	background-position: center center;
+ul.nav li a, ul.nav li a:visited {
+    color: #183642 !important;
+}
 
-	background-repeat: no-repeat;
+ul.nav li a:hover, ul.nav li a:active {
+    color: #4A7C59 !important;
+}
 
-	background-attachment: fixed;
-
-	background-size: cover;
-
-	background-color: #8FC0A9;
-
+ul.nav li.active a {
+    color: #FAF3DD !important;
 }
