Added in authentication for user profiles

--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -30,6 +30,7 @@
 								</li>
 							</ul>
 						</nav>
+						<p class="alert"><%= alert %></p>
 						<div id="hidden-block" class="learn-more" display="none">
 							<p>This should be hidden
 								Stumptown meh master cleanse tote bag ethical. Raw denim austin viral 8-bit ramps, affogato bitters thundercats narwhal irony selfies keytar dreamcatcher sriracha fashion axe. Fanny pack meh hashtag ugh, migas drinking vinegar tilde humblebrag seitan locavore pabst try-hard mustache. Ramps heirloom godard typewriter bespoke 3 wolf moon, twee cray freegan vegan XOXO. Art party pour-over food truck kogi, scenester venmo tacos portland dreamcatcher squid tumblr vinyl hella tote bag sartorial. Kitsch XOXO swag scenester, selfies wayfarers put a bird on it gastropub irony listicle knausgaard quinoa art party hoodie. Meditation organic offal, kitsch messenger bag franzen squid yuccie microdosing.
